# OmorEkushe

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  MISSING_FUNCTIONALITY.md  README.md  REPLATFORMING_STRATEGY.md  build.bat
LayoutEditor/: CMakeLists.txt  README.md
LayoutEditor/include/: KeyEditDialog.h  KeyboardView.h  LayoutData.h  LayoutEditor.h  MainWindow.h
LayoutEditor/src/: KeyEditDialog.cpp  KeyboardView.cpp  LayoutData.cpp  LayoutEditor.cpp  MainWindow.cpp  main.cpp
NetClient/: CMakeLists.txt  version_manager.py
NetClient/include/: NetClient.h  NetClientVersion.h
NetClient/src/: NetClient.cpp  NetClient.rc
include/core/: app_state.h  keyboard_hook_service.h  layout.h  layout_discovery.h  startup_options.h  window_layout_binding.h
include/lib/: stb_image.h
include/platform/linux/: main_window.h  native_input.h  registration_dialog.h  splash_screen.h
include/platform/windows/: main_window.h  native_input.h  options_overlay.h  registration_dialog.h  resource.h  splash_screen.h
include/platform/windows/main_window/: main_window_background.h  main_window_helpers.h  main_window_layout.h  main_window_tray.h  main_window_types.h
include/utils/: system_utils.h
src/app/: main.cpp
src/core/: app_state.cpp  keyboard_hook_service.cpp  layout.cpp  layout_discovery.cpp  startup_options.cpp  window_layout_binding.cpp
src/platform/linux/: main_window.cpp  native_input.cpp  registration_dialog.cpp  splash_screen.cpp
src/platform/windows/: app.rc  main_window.cpp  native_input.cpp  options_overlay.cpp  registration_dialog.cpp  splash_screen.cpp
src/platform/windows/main_window/: main_window_background.cpp  main_window_helpers.cpp  main_window_layout.cpp  main_window_tray.cpp
src/utils/: system_utils.cpp
